--- a/Rocket Simulator/Rocket Simulator.vcxproj
+++ b/Rocket Simulator/Rocket Simulator.vcxproj
@@ -80,6 +80,9 @@
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
