--- a/Rocket Simulator/Rocket Simulator.vcxproj.filters
+++ b/Rocket Simulator/Rocket Simulator.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Quaternion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Euler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KalmanFilter.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Quaternion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Euler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
