Tried Refactoring; Vec3D still has issues with operation overloads.

--- a/Rocket Simulator/Rocket Simulator.vcxproj
+++ b/Rocket Simulator/Rocket Simulator.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="KalmanFilter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Quaternion.cpp" />
+    <ClCompile Include="Vec3D.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
@@ -79,6 +80,7 @@
     <ClInclude Include="Euler.h" />
     <ClInclude Include="KalmanFilter.h" />
     <ClInclude Include="Quaternion.h" />
+    <ClInclude Include="Vec3D.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
